--- a/site-motivation.Rmd
+++ b/site-motivation.Rmd
@@ -15,7 +15,7 @@ library(haven)
 # Predicting Capital Bikes Departures
 
 
-```{r setup2, include=FALSE}
+```{r setup2}
 knitr::include_graphics("map.png")
 ```
 
