--- a/site-motivation.Rmd
+++ b/site-motivation.Rmd
@@ -27,7 +27,7 @@ We chose predictors that vary by the hour that we believe are relevant to indivi
 * weather: this includes general weather conditions (categorical variable), rain, temperature, snow. 
 * sunlight: this is a dummy variable for whether there is sunlight or not
 * time: this includes day of the week, weekday, month, year, as well as selected holiday days.
-* other stations: this includes departures from stations in an [ADD] mile radius
+* other stations: this includes departures from stations in an 2 mile radius
 
 
 Being able to predict Capital Bikeshare demand, could result in a more efficient allocation of bikes when stations are re-stocked at night. It could also inform and it could inform the eventual expansion of stations across strategic locations across the city to improve the experience of Washingtonians.
@@ -36,12 +36,11 @@ Being able to predict Capital Bikeshare demand, could result in a more efficient
 
 We use Capital Bikeshare's publicly available [historic data](https://www.capitalbikeshare.com/system-data), ranging from May 2020 until September 2021. The reason we chose this range is that before May 2020, the data were collected in a different format.
 
-Our unit of observation is departures by the hour. So we would expect 24 rows per day. Since we have 17 months worth of data, we would expect roughly 365x24 + 150x24= 12360 observations. In fact, after data cleaning, our dataset has 12430 rows, each indicating the number of hours that departed Lincoln Memorial at a given hour.
+Our unit of observation is departures by the hour. So we would expect 24 rows per day. Since we have 17 months worth of data, we would expect roughly 365x24 + 150x24 = 12334 observations. In fact, after data cleaning, our dataset has 12334 rows, each indicating the number of hours that departed Lincoln Memorial at a given hour.
 
-For weather predictors we used data from ADD
+For weather predictors we used data from https://www.visualcrossing.com/weather/weather-data-services#/editDataDefinition
 
-For sunlight we used data from ADD
-
+For sunlight we used data from the `suncalc` package
 
 ## Models performed
 
@@ -57,6 +56,6 @@ We start with a decision tree given the size and complexity of our data . We the
 
 We will use RMSE as our error metric to judge how well our models do. RMSE is very sensitive to outliers as it squares them resulting in a bigger error compared to MAE for example. From the exploration done above, we know that there is a wide range within (e.g. in some hours it is 0, for example at night) and across days (e.g. for instance there are very few rides on Christmas day) in terms of hourly departures. Our motivation for this project is to reduce the chance that there will be no bikes available so that the service is more reliable. Therefore, we think that the RMSE will be better for our application purposes because it penalizes more the outliers that we do have in our data.
 
-How much error is too much depends on how loose or strict we want to predict our outcomes. For our project, some error is probably accepted but being too loose in deciding what the error could be too costly. Based on the average departures per hour on any given day *insert number* , we think an RMSE of 2-3 would be acceptable
+How much error is too much depends on how loose or strict we want to predict our outcomes. For our project, some error is probably accepted but being too loose in deciding what the error could be too costly. Based on the average departures per hour on any given day 3.45, we think an RMSE of 2-3 would be acceptable
 
 
