--- a/site-random-forest.Rmd
+++ b/site-random-forest.Rmd
@@ -58,7 +58,7 @@ Finally, Random forests averages predictions estimated by all decision trees in 
 
 We tried 1600m, 3200m, and 5000m. 5000m was the best, but took too long to run (3.59). 3200m was very close (0.07 RMSE difference). 1600m showed significant degradation (0.29 RMSE difference).
 
-```{r get_data, cache=TRUE}
+```{r get_data, cache=TRUE, message=FALSE}
   
 lagged_data <- read_csv('lagged_data_3200.csv')
 
@@ -97,8 +97,8 @@ folds <- vfold_cv(data = train, v = 10)
 recipe <-
   recipe(formula = departures ~ ., data = train) %>%
   step_holiday(date, holidays = timeDate::listHolidays("US"), keep_original_cols = FALSE) %>% 
-  step_nzv(all_predictors()) %>% # aaron suggested adding this
-  step_BoxCox(all_outcomes())  ## only works with positive vars, no problem in our case
+  step_nzv(all_predictors()) %>%
+  step_BoxCox(all_outcomes())
 ```
 
 ## Tuning
@@ -159,19 +159,25 @@ metrics %>%
 
 ### `min_n` and `mtry` tuning
 
-![min_n and mtry](min_n_mtry.png)
+![](min_n_mtry.png)
 
-### `mtry` only graph - used 250 in final model
+### `mtry` only graph
 
-![mtry](mtry.png)
+We used `mtry=250` in the final model.
 
-### `min_n` only graph. `min_n` does not seem to matter, used default of 5.
+![](mtry.png)
 
-![mtry](mtry.png)
+### `min_n` only graph
 
-### Tuning for number of trees. Used 1000
+`min_n` does not seem to matter, used the default value of 5.
 
-![trees](trees.png)
+![](min_n.png)
+
+### Tuning for number of trees
+
+We used `trees=1000`
+
+![](trees.png)
 
 ## Picking results for tree tuning
 
@@ -190,7 +196,10 @@ final_rf <- finalize_model(
   mod,
   best_rmse
 )
+```
 
+
+```{r ft_results_metrics, cache=TRUE}
 collect_metrics(tune_results, summarize = FALSE) %>%
   filter(.metric == "rmse" || .metric == "mae") %>%
   ggplot(aes(x = id, y = .estimate, group = .estimator)) +
@@ -204,45 +213,7 @@ collect_metrics(tune_results, summarize = FALSE) %>%
   filter(.metric == "rmse") %>%
   summarize(mean(.estimate))
 
-## line plot fo RMSE for comparison between models
-plot <- collect_metrics(tune_results, summarize = FALSE)
-
-# plot rmse
-RF <- plot %>% 
-  filter(.metric == "rmse") %>% 
-  ggplot(aes(id, .estimate, group = .estimator)) +
-  geom_line() +
-  geom_point() +
-  scale_y_continuous(limits = c(0, 8)) +
-  labs(title = "Calculated RMSE Across the 10 Folds - Random Forests Regression",
-       y = "RMSE_hat") +
-  theme_minimal()
-
-
 ```
 
-```{r chosen_one, cache=TRUE}
-final_wf <- workflow() %>%
-  add_recipe(recipe) %>%
-  add_model(final_rf) %>%
-  fit(train)
+## RMSE 3.82 on the training dataset across the 10 folds.
 
-p_test <- bind_cols(
-  test,
-  predict(object = final_wf, new_data = test))
-```
-
-Out of sample RMSE
-
-```{r OOS_RMSE_lincoln}
-sqrt(mean((p_test$departures - p_test$.pred)^2))
-```
-
-```{r lincoln_final_vip, warning=FALSE, cache=TRUE}
-final_rf %>%
-  set_engine("ranger", importance = "permutation") %>%
-  fit(departures ~ .,
-    data = train
-  ) %>%
-  vip(geom = "point")
-```
