--- a/site-discussion.rmd
+++ b/site-discussion.rmd
@@ -65,7 +65,6 @@ Compared to LASSO regression, Random forests decision trees are great for obtain
 RF also operates within sample, as opposed to LASSO models which could potentially provide out of sample predictions. In our case, this might be risky because we can not have negative departures, and since departures could go to very high levels in general, we should be careful in analyzing predictions that give very high hourly departure estimation which could be unrealistic. Although we expected LASSO to do a better job in avoiding multicollinearity between our predictors, it is difficult to judge for sure. 
 
 
-## Random Forest on the Test Data
 
 ```{r get_data, cache=TRUE, warning=FALSE, message=FALSE}
 
@@ -112,21 +111,22 @@ mod <- rand_forest(mtry = 250, trees = 1000) %>%
   set_engine("ranger")
 ```
 
+Out of sample RMSE
 
 ```{r chosen_one, cache=TRUE}
 final_wf <- workflow() %>%
   add_recipe(recipe) %>%
   add_model(mod) %>%
   fit(train)
+```
 
+
+```{r test}
 p_test <- bind_cols(
   test,
   predict(object = final_wf, new_data = test))
 ```
 
-## Results
-
-Out of sample RMSE
 
 ```{r OOS_RMSE_lincoln}
 sqrt(mean((p_test$departures - p_test$.pred)^2))
