--- a/site-discussion.rmd
+++ b/site-discussion.rmd
@@ -482,11 +482,12 @@ p_test %>%
     x = "hour")
 ```
  
-### Ideas for future projects
+### Ideas for future improvements
 
-* Scrape real time data to get station status. We could take the information from the graph above and create a new is_empty prediction then compare that to the truth data from the API.
-* Try xgboost
-* Account for the pandemic somehow (for example over the summer 2020 when there was a curfew)
+* Transform the dependent variable since this didn't seem to work for us
+* Scrape real time data to get station status. We could take the information from the graph above and create a new is_empty prediction then compare that to the truth data from the API
+* Try xgboost. This is an algorithm also based on trees but unlike random forest, it always gives more importance to functional space when reducing the cost of a model, while random forest hones in more on hyper-parameters
+* Account for the pandemic somehow (for example over the summer 2020 when there was a curfew) since this could have skewed our projections
 * Try a version where we first implement a random forest model to predict a binary variable of whether bikes are departing or not. Then use the predictions to create a new variable and estimate a second random forest model that uses that variable as a predictor
 * Instead of using RMSE, we could use a range of error that we envision for our project (eg. we can aim at always having 3 bikes at a station-- and hence our prediction would essentially be whether or not we have 3 bikes!)
 
